# rust-gen-callgraph

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  README.md
.serena/: project.yml
doc/: architecture.md
src/: analyzer.rs  call_data.rs  call_info.rs  class_name.rs  class_tree.rs  create_dot_graph.rs  create_graph.rs  dot_creater.rs  dot_writer.rs  filter.rs  lib.rs  main.rs  output.rs  struct_name.rs  struct_tree.rs
src/analyzer/: callgraph.rs  datas.rs  function.rs  mod.rs  name_resolver.rs  parser_syn.rs  project_infomation.rs
src/create_graph/: create_dot_graph.rs  module_tree.rs
src/output/: create_dot_graph.rs  dot_writer.rs  graph_creator.rs  module_tree.rs
